commented out non working changes, fixed spacing on sign in screen

--- a/TruckManager/src/Styles/SignInScreen.css
+++ b/TruckManager/src/Styles/SignInScreen.css
@@ -1,5 +1,4 @@
 .fgt-pass-link, .register-link {
-    width: 100%;
     display: flex;
     flex-direction: row;
 }
@@ -15,8 +14,8 @@
 }
 
 .sign-in-link-container {
-    justify-content: space-between;
     display: flex;
+    justify-content: space-between;
     flex-direction: row;
     width: 100%;
     margin-top: 10px;
