--- a/TruckManager/src/Styles/ViewEmployees.css
+++ b/TruckManager/src/Styles/ViewEmployees.css
@@ -57,3 +57,17 @@
     margin-left: 10px;
     margin-right: 10px;
 }
+
+.delete-x {
+    position: absolute;
+    right: 10px;
+    top: 5px;
+    width: 25px;
+    height: 25px;
+    padding-right: 5px;
+    display: flex;
+}
+.delete-x:hover {
+    cursor: pointer;
+    color: red;
+}
